[package]
name = "portr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
# clap = { version = "4.0", features = ["derive"] }
toml = "0.5.9"
bollard = "0.13"
tokio = { version = "1.7", features = ["time", "net", "io-util"] }
