[package]
name = "portr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Consider this library for a handler registry.
#       https://github.com/dtolnay/linkme

# TODO: Consider this library for emedding assets in the binary.
#       https://docs.rs/packer/latest/packer/index.html

[dependencies]
# clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
thiserror = "1.0"
